--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,8 +3,9 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+- type: linkedin
+  icon: 'fab fa-linkedin'
+  url:  'https://www.linkedin.com/in/khangnguyen2003/'
 
 - type: email
   icon: "fas fa-envelope"
@@ -14,6 +15,8 @@
   icon: "fas fa-rss"
   noblank: true
 # Uncomment and complete the url below to enable more contact options
+# - type: twitter
+#   icon: "fa-brands fa-x-twitter"
 #
 # - type: mastodon
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
